--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,86 @@
 #top{
-    width: 375px;
-    height: 80px;
     background-color: #ffffff;
+    display: flex;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0px 4px 6px #0000000D;
+    align-items: center;
+    justify-content: space-between;
     position: fixed;
+    top: 0;
+    left: 0;
+}
 }
 
 #bottom{
-    width: 375px;
+    background-color: #ffffff;
+    box-shadow: 0px -4px 6px #0000000D;
+    width: 100%;
     height: 80px;
-    top: 587px;
     position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#bottom input{
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21.09px;
+    height: 100%;
+    width: 80%;
+    padding-left: 17px;
+    border: 0;
+}
+
+#bottom button{
+    height: 80px;
+    width: 64px;
+    border: 0;
+    background-color: #ffffff;
+}
+
+#bottom input ::-webkit-input-placeholder {
+    color: #000000;
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21.09px;
+    font-style: italic;
+}
+
+#bottom input :focus::-webkit-input-placeholder{
+    color: transparent;
+}
+
+#bottom input:-moz-placeholder{
+    color: #000000;
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    font-style: italic;
+    line-height: 21.09px;
+}
+
+#bottom input:focus::-moz-placeholder {
+    color: transparent;
+}
+
+#content::-webkit-scrollbar {
+    display: none;
 }
 
 #content{
-    background-color: #e5e5e5;
+    width: 100%;
+    margin-top: 106px;
+    margin-bottom: 100px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 
 }
 
@@ -36,7 +103,7 @@
     margin-left: 22px;
 }
 
-.send { 
+.send ion-icon{ 
     width: 26px;
     height: 26px;
 }
