--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 #top{
     background-color: #ffffff;
     display: flex;
@@ -83,7 +85,6 @@
     gap: 4px;
 
 }
-
 
 .container{
     height: 667px;
